# wasi-wheels

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  index_build.yml  package_build.yml
scripts/: pydantic.sh
src/: build.rs  github.rs  index.rs  lib.rs  main.rs  python_registry.rs
src/index/: wasi.rs
templates/: index.html  package_files.html
tests/: integration.rs
tests/test-component/: .gitignore  pyproject.toml
tests/test-component/test_component/: main.py
tests/test-component/wit/: world.wit
