[package]
name = "wasi-wheels"
version = "0.1.0"
edition = "2024"
description = "Compile Python wheels for use with WASI targets."
repository = "https://github.com/benbrandt/wasi-wheels"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
glob = "0.3.3"
heck = "0.5.0"
hex = "0.4.3"
itertools = "0.14.0"
octocrab = { version = "0.47.0", features = ["stream"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "hickory-dns",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
tail-expr-drop-order = "allow"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
assert_cmd = "2.1.1"
tokio = { version = "1.48.0", features = ["test-util"] }
