[project]
name = "test-component"
version = "0.1.0"
description = ""
requires-python = "~=3.12"
dependencies = ["pydantic"]

[project.optional-dependencies]
test = ["componentize-py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["test_component"]

[tool.hatch.build.targets.wheel]
include = ["test_component"]
